// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Clipboard Snapshot Tests > Displays Clipboard 1`] = `
<div>
  <div
    class=_clipboard
    data-ods=clipboard
    data-part=root
    data-scope=clipboard
    data-testid=clipboard
    id=clip::r0:
    role=group
  >
    <div
      class=_input _clipboard__input
      data-readonly=true
    >
      <input
        aria-busy=false
        class=_input__field
        data-ods=clipboard-control
        data-part=control
        data-scope=clipboard
        id=:r1:
        readonly=
        type=text
        value=Test Message
      />
    </div>
    <button
      aria-label=Copier dans le presse-papier
      class=_button _button--primary _button--xs _button--ghost _tooltip-trigger _clipboard-trigger__copy
      data-ods=clipboard-trigger
      data-part=trigger
      data-scope=clipboard
      data-state=closed
      dir=ltr
      id=tooltip::r2::trigger
      role=button
      tabindex=0
      type=button
    >
      <span
        class=_icon _icon--file-copy
        data-ods=icon
        role=presentation
      />
    </button>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays disabled Clipboard 1`] = `
<div>
  <div
    class=_clipboard _clipboard--disabled
    data-ods=clipboard
    data-part=root
    data-scope=clipboard
    data-testid=clipboard
    id=clip::r3:
    role=group
  >
    <div
      class=_input _clipboard__input
      data-disabled=true
      data-readonly=true
    >
      <input
        aria-busy=false
        class=_input__field
        data-ods=clipboard-control
        data-part=control
        data-scope=clipboard
        disabled=
        id=:r4:
        readonly=
        type=text
        value=Test Message
      />
    </div>
    <button
      aria-label=Copier dans le presse-papier
      class=_button _button--primary _button--xs _button--ghost _tooltip-trigger _clipboard-trigger__copy
      data-ods=clipboard-trigger
      data-part=trigger
      data-scope=clipboard
      data-state=closed
      dir=ltr
      disabled=
      id=tooltip::r5::trigger
      role=button
      tabindex=0
      type=button
    >
      <span
        class=_icon _icon--file-copy
        data-ods=icon
        role=presentation
      />
    </button>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays loading Clipboard 1`] = `
<div>
  <div
    class=_clipboard
    data-ods=clipboard
    data-part=root
    data-scope=clipboard
    data-testid=clipboard
    id=clip::r6:
    role=group
  >
    <div
      class=_input _input--with-actions _clipboard__input
      data-readonly=true
      role=group
    >
      <input
        aria-busy=true
        class=_input__field
        data-ods=clipboard-control
        data-part=control
        data-scope=clipboard
        id=:r7:
        readonly=
        type=text
        value=Test Message
      />
      <div
        class=_input-actions
      >
        <span
          class=_spinner _spinner--primary _spinner--xs _input-actions__loading
          data-ods=spinner
          role=none
        >
          <svg
            aria-hidden=true
            class=_spinner__svg
            viewBox=0 0 24 24
            xmlns=http://www.w3.org/2000/svg
          >
            <rect
              fill=none
              height=24
              width=24
            />
            <g
              transform=translate(-237.694 -93.932)
            >
              <path
                d=M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z
                transform=translate(5486 4225)
              />
              <circle
                cx=1
                cy=1
                r=1
                transform=translate(248.694 114.932)
              />
              <circle
                cx=1
                cy=1
                r=1
                transform=translate(238.694 104.932)
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <button
      aria-label=Copier dans le presse-papier
      class=_button _button--primary _button--xs _button--ghost _tooltip-trigger _clipboard-trigger__copy
      data-ods=clipboard-trigger
      data-part=trigger
      data-scope=clipboard
      data-state=closed
      dir=ltr
      id=tooltip::r8::trigger
      role=button
      tabindex=0
      type=button
    >
      <span
        class=_icon _icon--file-copy
        data-ods=icon
        role=presentation
      />
    </button>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays masked Clipboard 1`] = `
<div>
  <div
    class=_clipboard
    data-ods=clipboard
    data-part=root
    data-scope=clipboard
    data-testid=clipboard
    id=clip::r9:
    role=group
  >
    <div
      class=_input _input--with-actions _clipboard__input
      data-readonly=true
      role=group
    >
      <input
        aria-busy=false
        class=_input__field
        data-ods=clipboard-control
        data-part=control
        data-scope=clipboard
        id=:ra:
        readonly=
        type=password
        value=Test Message
      />
      <div
        class=_input-actions
      >
        <button
          aria-controls=:ra:
          aria-label=Show
          class=_button _button--primary _button--xs _button--ghost
          data-ods=button
          type=button
        >
          <span
            class=_icon _icon--eye-off
            data-ods=icon
            role=presentation
          />
        </button>
      </div>
    </div>
    <button
      aria-label=Copier dans le presse-papier
      class=_button _button--primary _button--xs _button--ghost _tooltip-trigger _clipboard-trigger__copy
      data-ods=clipboard-trigger
      data-part=trigger
      data-scope=clipboard
      data-state=closed
      dir=ltr
      id=tooltip::rb::trigger
      role=button
      tabindex=0
      type=button
    >
      <span
        class=_icon _icon--file-copy
        data-ods=icon
        role=presentation
      />
    </button>
  </div>
</div>
`;

